# tungsten

./: .gitignore  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .npmrc  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: installation.mdx  introduction.mdx
docs/src/content/docs/guides/: advanced.mdx  first-sync.mdx  packing.mdx
docs/src/content/docs/reference/: cli.md  configuration.md  meta-files.mdx
docs/src/styles/: custom.css
examples/spritesheets/: tungsten.lock.toml
examples/spritesheets/src/: dontpackme.luau  packme.luau
src/: main.rs
src/api/: mod.rs  roblox.rs  studio.rs  upload.rs
src/api/sync/: debug.rs  mod.rs
src/commands/: init.rs  mod.rs  sync.rs  test.rs  watch.rs
src/commands/sync/: codegen_write.rs  encode.rs  individual.rs  mod.rs  packed.rs  paths.rs  raw.rs
src/core/: alpha_bleed.rs  asset.rs  codegen.rs  convert.rs  lockfile.rs  mod.rs  pack.rs
src/core/assets/: asset.rs  mod.rs
src/core/assets/img/: alpha_bleed.rs  compress.rs  convert.rs  mod.rs  pack.rs
src/core/postsync/: codegen.rs  lockfile.rs  mod.rs
src/utils/: config.rs  env.rs  logger.rs  mod.rs
