[package]
name = "tungsten-cli"
description = "Another command line tool to manage Roblox assets similar to Tarmac and Asphalt."
version = "0.1.3"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://pwnwrkz.github.io/tungsten-docs"
repository = "https://github.com/pwnwrkz/tungsten/"

exclude = [
    ".github/**",
    "assets",
    "assets/**",
    "examples",
    "examples/**",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
crunch = "0.5.3"
glob = "0.3.3"
hex = "0.4.3"
image = "0.25.10"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"

[[bin]]
name = "tungsten"
path = "src/main.rs"
