[package]
name = "tungsten-cli"
description = "Another command line tool to manage Roblox assets similar to Tarmac and Asphalt."
version = "2.1.1"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://pwnwrkz.github.io/tungsten-docs"
repository = "https://github.com/pwnwrkz/tungsten/"
keywords = ["roblox", "assets", "sync", "upload"]

exclude = [
    ".github/**",
    "assets",
    "assets/**",
    "examples",
    "examples/**",
]

[dependencies]
anyhow = "1.0.102"
bit-vec = "0.9.1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
crunch = "0.5.3"
glob = "0.3.3"
hex = "0.4.3"
image = { version = "0.25.10", features = ["jpeg", "bmp", "tga"] }
libcaesium = "0.20.3"
notify = "8.2.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
resvg = "0.47.0"
roblox_install = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
tiny-skia = "0.12.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
usvg = "0.47.0"

[[bin]]
name = "tungsten"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
